criando secao de produtos

--- a/src/scss/_vars.scss
+++ b/src/scss/_vars.scss
@@ -1,5 +1,5 @@
 $bg-color-body: #2D5381;
-$bg-color-body-light: #4380ca;
+$bg-color-body-light: #17a2b8;
 $bg-color-body-dark: #132539;
 $bg-color-body-dark-alt: #284A73;
 $color-01: #ddd;
