--- a/src/css/style.css
+++ b/src/css/style.css
@@ -71,7 +71,7 @@ header .container-fluid .row .navbar {
   padding: 0 30px;
 }
 header .container-fluid .row .navbar .navbar-toggler {
-  background: #4380ca;
+  background: #17a2b8;
   font-size: 2.1rem;
 }
 header .container-fluid .row .navbar #navMobileMenu .nav-link {
@@ -122,6 +122,50 @@ header .container-fluid .row .navbar #navMobileMenu .active {
   color: #ddd;
   font-size: 1.4rem;
   padding: 10px 0;
+}
+
+.products {
+  background: #ddd;
+  padding: 30px 15px;
+}
+.products_title {
+  padding: 5px 0;
+  font-size: 2.1rem;
+  font-weight: 700;
+  color: #E68745;
+}
+.products_card {
+  background: rgba(250, 250, 250, 0.2);
+  padding: 10px 0;
+  border-radius: 5px;
+  margin: 10px 0;
+  text-align: center;
+}
+.products_card--title {
+  padding: 15px 0;
+  color: #E68745;
+  font-weight: 700;
+  font-size: 1.8rem;
+}
+.products_card--text {
+  text-align: left;
+  font-size: 1.4rem;
+}
+.products_card--btn {
+  background: #284A73;
+  border-color: #284A73;
+  color: #ddd;
+  align-items: center;
+  margin: 15px 0;
+  padding: 7px 25px;
+  font-size: 1.4rem;
+  transition: all 0.5s ease-in-out;
+}
+.products_card--btn:hover {
+  background: #2D5381;
+  border-color: #2D5381;
+  color: #ddd;
+  box-shadow: 0 0 1em rgba(0, 0, 0, 0.748);
 }
 
 /*# sourceMappingURL=style.css.map */
