--- a/src/scss/_products.scss
+++ b/src/scss/_products.scss
@@ -9,7 +9,7 @@
     }
     &_card {
         background: rgba(250, 250, 250, .2);
-        padding: 10px 0;
+        padding: 10px;
         border-radius: 5px;
         margin: 10px 0;
         text-align: center;
@@ -20,6 +20,7 @@
             font-size: $font-size-medium;
         }
         &--text {
+            padding: 15px 15px;
             text-align: left;
             font-size: $font-size-small;
         }
